--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /*Nav Bar*/
 
 nav {
-	color: white;
-	background-color: #1c2024 !important;
+	background-color: #1c2024;
 	position: sticky;
 	top: 0;
 	display: flex;
@@ -16,19 +15,16 @@ nav input {
 }
 
 nav label{
+	color: white;
 	font-size: 1.75rem;
 	cursor: pointer;
 	display: none;
 }
 
 nav a {
-	font-size: 1.75rem !important;
+	font-size: 1.75rem;
 	color: white;
 	text-decoration: none;
-}
-
-nav a:hover {
-	color: white;
 }
 
 nav ul {
@@ -40,9 +36,12 @@ nav ul {
 
 nav ul li a {
 	margin-right: 20px;
-	font-size: 1.15rem !important;
-	text-decoration: none;
+	font-size: 1.1rem;
 	transition: color 0.3s;
+}
+
+nav a:hover {
+	color: white;
 }
 
 nav ul li a:hover {
@@ -54,46 +53,52 @@ nav ul li a:hover {
 /*Header*/
 
 header {
-	background-color: #282828 !important;
-	text-align: center !important;
-	padding-top: 6rem !important;
-	padding-bottom: 6rem !important;
-	width: 100% !important;
+	background-color: #282828;
+	text-align: center;
+	padding-top: 6rem;
+	padding-bottom: 6rem;
 }
 
 header h1 {
-	color: white !important;
-	font-size: 3.5rem !important;
-	font-weight: 650 !important;
+	color: white;
+	font-size: 3.5rem;
+	font-weight: 650;
+	margin-bottom: 0;
 }
 
 header p {
-	color: grey !important;
-	font-size: 1.25rem !important;
-	font-weight: 400 !important;
-	margin-bottom: 0 !important;
+	color: grey;
+	font-size: 1.25rem;
+	font-weight: 400;
 }
 
 
 
 
 /*Cards*/
+.cards > h1 {
+	padding: 2rem 2rem 0rem;
+	color: white;
+	text-decoration: underline;
+}
+
 ul {
-	padding: 1.5rem;
+	padding: 0;
 }
 
 .cards > ul {
-	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 	grid-column-gap: 1.5rem;
 	grid-row-gap: 1.5rem;
+	list-style: none;
+	padding: 0 2rem;
 }
+
 
 .card {
 	background-color: #282828;
-	border: 1px solid;
-	border-radius: 0.25rem;
+	border-radius: 0.5rem 0.5rem 0 0;
 	display: flex;
 	flex-direction: column;
 	position: relative;
@@ -108,20 +113,37 @@ ul {
 	bottom: 0;
 }
 
+.story {
+	color: white;
+	background-color: #282828;
+	padding: 0.7rem 1.2rem;
+	position: absolute;
+	margin-top: 0;
+	left: 0;
+	font-weight: bold;
+	border-radius: 0.5rem 0;
+	text-transform: uppercase;
+}
+
 .card img {
 	object-fit: cover;
-	height: 30rem;
+	height: 25rem;
 	width: 100%;
+	border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .card a {
 	color: white;
 	text-decoration: none;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 1rem 10px 0;
 }
 
-.card p {
+.card p:not(.story) {
 	color:white;
-	margin-top: 0;
+	margin-top: 20px;
+	padding: 0 10px;
 }
 
 
@@ -157,9 +179,9 @@ ul {
 
 body, html {
     border: 0;
-    height: 100%;
     margin: 0;
     padding: 0;
+    height: 100%;
     width: 100%;
 	font-family: Ariel, sans-serif;
 	background-color: #121212;
